# KrakRust

./: .gitignore  Cargo.toml  Readme.md  pyproject.toml  tox.ini
kraken/: Cargo.toml
kraken/src/: kraken.rs
kraken/src/tests/: test_kraken.rs
pykraken/: Cargo.toml  pykraken_tests.py  pyproject.toml
pykraken/src/: pykraken.rs
src/: kraken.rs  main.py  main.rs  pykraken.rs
src/kraken/: test.rs
