[package]
name = "pykraken"
version = "0.1.0"
edition = "2021"

[lib]
name = "pykraken"
crate-type = ["cdylib"]
path = "src/pykraken.rs"

[dependencies]
kraken = { path = "../kraken" }
serde = { version = "1" }
serde_json = { version = "1" }
pyo3 = {version = "0.20.0", features = ["extension-module"]}
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }

